# dq-ui

./: .gitignore  ANALYSIS.md  Cargo.toml  Makefile  README.md  dq-ui-analysis.md  package-lock.json  package.json
crates/dq-api/: Cargo.toml
crates/dq-api/src/: client.rs  error.rs  lib.rs
crates/dq-components/: Cargo.toml
crates/dq-components/src/: alert.rs  badge.rs  before_after.rs  button.rs  canvas_editor.rs  card.rs  control.rs  empty.rs  field.rs  icon_button.rs  icons.rs  image_viewer.rs  input.rs  kv.rs  lib.rs  list.rs  loading.rs  log_panel.rs  modal.rs  mode_tabs.rs  param_row.rs  phosphor.rs  pref.rs  preview.rs  progress.rs  prompt_editor.rs  resizable_split.rs  section.rs  select.rs  slider.rs  split_view.rs  staging_area.rs  styles.rs  tabs.rs  tag.rs  toast.rs
crates/dq-layout/: Cargo.toml
crates/dq-layout/src/: lib.rs  sidebar.rs  studio_nav.rs  topnav.rs
crates/dq-theme/: Cargo.toml
crates/dq-theme/src/: fonts.rs  lib.rs  linear.rs
crates/dq-tokens/: Cargo.toml
crates/dq-tokens/src/: color.rs  generate.rs  layout.rs  lib.rs  semantic.rs  spacing.rs  typography.rs
docs/: iced-macos26-glass-plan.md
examples/mail-tri/: Cargo.toml
examples/mail-tri/src/: app.rs  main.rs
examples/studio-create/: Cargo.toml
examples/studio-create/src/: api.rs  app.rs  create_page.rs  main.rs  right_panel.rs  task_queue.rs
examples/teams-inbox/: Cargo.toml
examples/teams-inbox/src/: app.rs  main.rs
scripts/: find_orphan_theme_selectors.py  tokenize_theme_rgba.py
