[package]
name = "studio-create"
description = "Static UX demo — Studio image create page (Web parity, static data)"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
dq-api.workspace = true
dq-components.workspace = true
dq-layout.workspace = true
dq-theme.workspace = true
dq-tokens.workspace = true
iced.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rfd.workspace = true
chrono.workspace = true
sysinfo.workspace = true
base64.workspace = true
